--- a/OnlineFoodDelivery/src/main/resources/application.properties
+++ b/OnlineFoodDelivery/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=OnlineFoodDelivery
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/food_delivery
 spring.datasource.username=root
 spring.datasource.password=Jacinda@1997
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
